[build-system]
requires = [ "setuptools", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "apmcheck"
version = "0.1.2"
description = "CLI tool to detect APM coverage (Datadog, OpenTelemetry)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = [ "click>=8.0.0",]
[[project.authors]]
name = "Matias Salinas"
email = "support@fenden.com"

[project.scripts]
apmcheck = "apmcheck.cli:main"
